# noc-kit

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.in  TODO  autogen.sh  config.h.in  configure  configure.ac  version.h.in
doc/: Makefile.am  Makefile.in
m4/: .hellogit
src/app-specific/: Makefile.in
src/distro-specific/: Makefile.am  Makefile.in  zfd.sh.in
src/general/: Makefile.am  Makefile.in  nk_common.sh.in  nk_logic_ops.sh  nk_logic_ops.sh.in  nk_tests.sh  nk_utils.sh  shell_common.sh  showsigs.c  showsigs.c.in  slaughter.sh  slaughter.sh.in  tryedit.sh.in
src/system-specific/: Makefile.am  Makefile.in  _miniprlimit.c.in  miniprlimit.sh.in  zfd.sh  zfd.sh.in
tests/: Makefile.am  travis.sh
